--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -118,6 +118,13 @@
           "target": [
             "TargetFacilitis"
           ]
+        },
+         {
+          "name": "RouteBookRoom",
+          "pattern": "BookRoom",
+          "target": [
+            "TargetBookRoom"
+          ]
         }
       ],
       "targets": {
@@ -162,6 +169,13 @@
           "clearControlAggregation": false,
           "viewId": "Facilitis",
           "viewName": "Facilitis"
+        },
+           "TargetBookRoom": {
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
+          "viewId": "Book_Room",
+          "viewName": "Book_Room"
         }
       }
     },
