--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -96,11 +96,18 @@
             "TargetTilepage"
           ]
         },
-         {
+        {
           "name": "RouteAdmin",
           "pattern": "Admin",
           "target": [
             "TargetAdmin"
+          ]
+        },
+        {
+          "name": "RouteAdminDetails",
+          "pattern": "AdminDetails/{sPath}",
+          "target": [
+            "TargetAdminDetails"
           ]
         },
         {
@@ -167,6 +174,13 @@
           "clearControlAggregation": false,
           "viewId": "Admin",
           "viewName": "Admin"
+        },
+        "TargetAdminDetails": {
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
+          "viewId": "AdminDetails",
+          "viewName": "AdminDetails"
         },
           "TargetRoomDetails": {
           "viewType": "XML",
