Object page layout in Bed Dtails

--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -154,7 +154,7 @@
         },
          {
           "name": "RouteRoomImages",
-          "pattern": "RoomImages",
+          "pattern": "RoomImages/{sPath}",
           "target": [
             "TargetRoomImages"
           ]
