--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -62,6 +62,11 @@
             "type": "sap.ui.model.json.JSONModel",
             "uri": "model/RateType.json",
             "preload": true
+      },
+      "FacilityType": {
+            "type": "sap.ui.model.json.JSONModel",
+            "uri": "model/FacilityType.json",
+            "preload": true
       }
     },
     "resources": {
