Facility Detail Page

--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -166,7 +166,7 @@
         },
         {
           "name": "RouteFacilitiesDetails",
-          "pattern": "FacilitiesDetails",
+          "pattern": "FacilitiesDetails/{sPath}",
           "target": [
             "TargetFacilitiesDetails"
           ]
