Add Branch Data functionality with routing, UI updates, and data handling

--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -171,6 +171,13 @@
             "TargetFacilitiesDetails"
           ]
         },
+         {
+           "name": "RouteBranchData",
+          "pattern": "BranchData",
+          "target": [
+            "TargetBranchData"
+          ]
+        },
         {
            "name": "RouteMaintainData",
           "pattern": "MaintainData",
@@ -264,6 +271,13 @@
           "viewId": "FacilitiesDetails",
           "viewName": "FacilitiesDetails"
         },
+         "TargetBranchData": {
+            "viewType": "XML",
+            "transition": "slide",
+            "clearControlAggregation": false,
+            "viewId": "BranchData",
+            "viewName": "BranchData"
+          },
         "TargetMaintainData": {
           "viewType": "XML",
           "transition": "slide",
