Add Hostel Features management functionality with UI and routing

--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -178,6 +178,13 @@
             "TargetBranchData"
           ]
         },
+         {
+           "name": "RouteHostelFeatures",
+          "pattern": "HostelFeatures",
+          "target": [
+            "TargetHostelFeatures"
+          ]
+        },
         {
            "name": "RouteMaintainData",
           "pattern": "MaintainData",
@@ -278,6 +285,13 @@
             "viewId": "BranchData",
             "viewName": "BranchData"
           },
+          "TargetHostelFeatures": {
+              "viewType": "XML",
+              "transition": "slide",
+              "clearControlAggregation": false,
+              "viewId": "HostelFeatures",
+              "viewName": "HostelFeatures"
+            },
         "TargetMaintainData": {
           "viewType": "XML",
           "transition": "slide",
