Admin Booking Edit changes

--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -131,7 +131,7 @@
         },
          {
           "name": "RouteFacilitis",
-          "pattern": "Facilitis",
+          "pattern": "Facilities",
           "target": [
             "TargetFacilitis"
           ]
