--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -75,12 +75,26 @@
       }
     },
     "resources": {
-      "css": [
-        {
-          "uri": "css/style.css"
-        }
-      ]
-    },
+            "js": [
+                {
+                    "uri": "./libs/jspdf.umd.min.js"
+                },
+                {
+                    "uri": "./libs/jspdf.plugin.autotable.min.js"
+                },
+                {
+                    "uri": "./libs/xlsx-to-json.js"
+                },
+                {
+                    "uri": "./libs/json-to-xlsx.js"
+                }
+            ],
+            "css": [
+                {
+                    "uri": "css/style.css"
+                }
+            ]
+        },
     "routing": {
       "config": {
         "routerClass": "sap.m.routing.Router",
