Bug fixes and changes in manage invoice

--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -72,6 +72,11 @@
         "type": "sap.ui.model.json.JSONModel",
         "uri": "model/CompanyInvoiceStatus.json",
         "preload": true
+      },
+      "InvoiceSAC": {
+            "type": "sap.ui.model.json.JSONModel",
+            "uri": "model/InvoiceSAC.json",
+            "preload": true
       }
     },
     "resources": {
