User id save in manage invoice

--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -77,6 +77,11 @@
             "type": "sap.ui.model.json.JSONModel",
             "uri": "model/InvoiceSAC.json",
             "preload": true
+      },
+      "Rate": {
+        "type": "sap.ui.model.json.JSONModel",
+        "uri": "model/Rate.json",
+        "preload": true
       }
     },
     "resources": {
