--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -160,7 +160,7 @@
         },
         {
           "name": "RouteFacilitis",
-          "pattern": "Facilities",
+          "pattern": "Facilities/{value}",
           "target": [
             "TargetFacilitis"
           ]
